--- a/optimize_piecewise/generate_original.ipynb
+++ b/optimize_piecewise/generate_original.ipynb
@@ -482,42 +482,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "id": "fd8db0a2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Counter({0: 544,\n",
-       "         1: 30,\n",
-       "         2: 10,\n",
-       "         23: 1,\n",
-       "         13: 1,\n",
-       "         7: 2,\n",
-       "         6: 1,\n",
-       "         3: 4,\n",
-       "         17: 1,\n",
-       "         5: 1,\n",
-       "         4: 1,\n",
-       "         8: 1,\n",
-       "         11: 1,\n",
-       "         22: 1})"
+       "574"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "counts_x"
+    "counts_x[0] + counts_x[1]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc2b3bd9",
+   "id": "ff5876ca",
    "metadata": {},
    "outputs": [],
    "source": []
