--- a/Calculate_M_factor.ipynb
+++ b/Calculate_M_factor.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "7fe0c736",
    "metadata": {},
    "outputs": [],
@@ -23,13 +23,45 @@
     "from tqdm import tqdm\n",
     "import random\n",
     "from scipy.special import hermite, factorial\n",
-    "import RSC_functions\n",
+    "import RSC_sim\n",
     "from pathos.multiprocessing import Pool"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e90463de",
+   "metadata": {},
+   "source": [
+    "### Trap depth"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
+   "id": "9dcfd58f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Max n:  [61, 70, 337]\n"
+     ]
+    }
+   ],
+   "source": [
+    "trap_freq = np.array([75e3 * 2 * np.pi, 65e3 * 2 * np.pi, 13.6e3 * 2 * np.pi])  # trap frequency for x, y, z in rad/s\n",
+    "k_vec = 2 * np.pi / 531e-9  # wavevector of 531 nm light\n",
+    "decay_ratio = [1/3, 1/3, 1/3]  # branching ratio for mN = -1, 0, 1\n",
+    "branch_ratio = 0.0064 # barnching ratio of going to a different spin manifold\n",
+    "trap_depth = 0.22e-3*cts.k  # trap depth in J\n",
+    "max_n = [int(trap_depth/(cts.h*freq/(2*np.pi))) for freq in trap_freq]  # max n to consider for each axis\n",
+    "print(\"Max n: \", max_n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "8fcb3cf7",
    "metadata": {},
    "outputs": [],
@@ -39,11 +71,11 @@
     "from tqdm import tqdm\n",
     "from pathos.multiprocessing import Pool, cpu_count\n",
     "\n",
-    "MAX_N = 40\n",
+    "MAX_N = 350\n",
     "LD_MIN = 0.0\n",
     "LD_MAX = 2.5\n",
-    "LD_RES = 0.0001\n",
-    "LD_GRID = np.arange(LD_MIN, LD_MAX + LD_RES, LD_RES)  # 0.0001 steps\n",
+    "LD_RES = 0.01\n",
+    "LD_GRID = np.arange(LD_MIN, LD_MAX + LD_RES, LD_RES)  \n",
     "LD_LEN = len(LD_GRID)\n",
     "\n",
     "M_FACTOR_TABLE = np.zeros((MAX_N + 1, MAX_N + 1, LD_LEN), dtype=np.float64)\n",
@@ -52,8 +84,7 @@
     "def _single_M_factor_task(args):\n",
     "    \"\"\"Worker function: computes M_factor for a given (n_i, n_f, ld_index).\"\"\"\n",
     "    n_i, n_f, ld_index, ld = args\n",
-    "    from RSC_functions import M_factor  # Import inside worker to avoid pickling issues\n",
-    "    val = M_factor(n_i, n_f, ld)\n",
+    "    val = RSC_sim.M_factor(n_i, n_f, ld)\n",
     "    return (n_i, n_f, ld_index, val)\n",
     "\n",
     "\n",
@@ -84,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "811f7dd4",
    "metadata": {},
    "outputs": [
@@ -99,7 +130,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Computing M_factors: 100%|██████████| 42026681/42026681 [3:05:48<00:00, 3769.71it/s]  \n"
+      "Computing M_factors: 100%|██████████| 30923451/30923451 [2:20:08<00:00, 3677.75it/s]  \n"
      ]
     },
     {
