--- a/optimize_piecewise/XY/XY_optimize.ipynb
+++ b/optimize_piecewise/XY/XY_optimize.ipynb
@@ -24,6 +24,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "696404c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 20.,  40.,  60.,  80., 100., 120., 140., 160., 180., 200., 220.,\n",
+       "       240., 260., 280., 300., 320., 340., 360., 380., 400.])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.linspace(20, 400, 20)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "7ecaad07",
    "metadata": {},
